# PageIndex-Legal-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  supervisord.conf
.streamlit/: secrets.toml.example
agents/: __init__.py  drafting.py  explainability.py  memory.py  party_analysis.py  risk_detection.py  understanding.py  validation.py  verification.py
api/: main.py  schemas.py
core/: __init__.py  ingestion.py  pageindex_adapter.py  pageindex_engine.py  retrieval.py
frontend/: streamlit_app.py
infra/: __init__.py  audit.py  benchmark.py  config.py  llm.py  persistence.py  sample_docs.py  store.py  tracing.py
knowledge/: __init__.py  jurisdiction.py  legal_ontology.py  risk_simulation.py
pipeline/: __init__.py  graph_flow.py  orchestrator.py
